--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -153,6 +153,11 @@ editar_inscripcion:
    defaults: {_controller: "EasanlesAtletismoBundle:Inscripcion:editarInscripcion"}
    requirements:
       sidCom: \d+
+borrar_inscripcion:
+   path: /competiciones/{sidCom}/inscripciones/borrar
+   defaults: {_controller: "EasanlesAtletismoBundle:Inscripcion:borrarInscripcion"}
+   requirements:
+      sidCom: \d+
 
 
 #===================PARTICIPACIONES==================
