Registro marcas: seleccion atleta

--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -188,7 +188,10 @@ intentos_pruebas:
 intentos_atletas:
    path: /marcas/getatl
    defaults: {_controller: "EasanlesAtletismoBundle:Intento:obtenerAtletasInscritos"}
-     
+intentos_rondas:
+   path: /marcas/getron
+   defaults: {_controller: "EasanlesAtletismoBundle:Intento:obtenerRondas"}
+        
 
 #====================CONFIGURACION===================
 configuracion: #portada configuracion
