Registro marcas: cargar formulario

--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -191,6 +191,9 @@ intentos_atletas:
 intentos_rondas:
    path: /marcas/getron
    defaults: {_controller: "EasanlesAtletismoBundle:Intento:obtenerRondas"}
+crear_intento:
+   path: /marcas/nuevo
+   defaults: {_controller: "EasanlesAtletismoBundle:Intento:crearIntento"}
         
 
 #====================CONFIGURACION===================
