Control de acceso basico

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,21 +18,31 @@ security:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
+#       login:
+#           pattern:  ^/demo/secured/login$
+#           security: false
 
+        #login:
+            #pattern:  ^/login
+            #security: false
+            
         secured_area:
-            pattern:    ^/demo/secured/
+#           pattern:    ^/demo/secured/
+#           form_login:
+#               check_path: _security_check
+#               login_path: _demo_login
+#           logout:
+#               path:   _demo_logout
+#               target: _demo
+            anonymous: ~
+            provider: in_memory
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                login_path: /login
+                check_path: /login_check
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+                path: /logout
+                target: /
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/admin, roles: ROLE_ADMIN }
